Testing getbyauthor
